--- a/src/components/Input.module.scss
+++ b/src/components/Input.module.scss
@@ -11,7 +11,8 @@
 
   width: 100%;
   padding: 0.75rem 1rem;
-  border: 1px solid;
+  border-width: 1px;
+  border-style: solid;
   appearance: none;
   font-family: inherit;
   font-size: 16px;
